fix: letter spacing belongs to green theme

--- a/style/cv.css
+++ b/style/cv.css
@@ -183,7 +183,6 @@ div.experiance div.function h3
     float: right;
     margin-bottom: 5px;
     margin-top: 5px;
-    letter-spacing: 2px;
 }
 
 div.project div.skillrefs
